@@ -1,16 +1,17 @@
 package dev.shvetsova.ewmc.request.service.request;
 
 import dev.shvetsova.ewmc.dto.mq.RequestMqDto;
+import dev.shvetsova.ewmc.dto.mq.RequestStatusMqDto;
 import dev.shvetsova.ewmc.dto.notification.NewNotificationDto;
 import dev.shvetsova.ewmc.dto.request.ParticipationRequestDto;
 import dev.shvetsova.ewmc.enums.MessageType;
 import dev.shvetsova.ewmc.exception.ConflictException;
 import dev.shvetsova.ewmc.exception.NotFoundException;
-import dev.shvetsova.ewmc.request.http.EventClient;
 import dev.shvetsova.ewmc.request.mapper.RequestMapper;
 import dev.shvetsova.ewmc.request.model.Request;
 import dev.shvetsova.ewmc.request.model.RequestStatus;
 import dev.shvetsova.ewmc.request.mq.NotificationSupplier;
+import dev.shvetsova.ewmc.request.mq.RequestSupplier;
 import dev.shvetsova.ewmc.request.repository.RequestRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -18,7 +19,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static dev.shvetsova.ewmc.request.model.RequestStatus.*;
 import static dev.shvetsova.ewmc.utils.Constants.THE_REQUIRED_OBJECT_WAS_NOT_FOUND;
@@ -28,9 +28,8 @@ import static dev.shvetsova.ewmc.utils.Constants.THE_REQUIRED_OBJECT_WAS_NOT_FOU
 public class RequestServiceImpl implements RequestService {
     private final RequestRepository requestRepository;
 
-    private final EventClient eventClient;
-
     private final NotificationSupplier notificationSupplier;
+    private final RequestSupplier requestSupplier;
 
     /**
      * - нельзя добавить повторный запрос (Ожидается код ошибки 409)<p>
@@ -49,43 +48,15 @@ public class RequestServiceImpl implements RequestService {
                     "Conflict Exception");
         }
 
-//        final EventFullDto event = eventClient.getEventById(12L, eventId);
-
-//        инициатор события не может добавить запрос на участие в своём событии (Ожидается код ошибки 409)<p>
-//        if (event.getInitiator().getId().equals(userId)) {
-//            throw new ConflictException(
-//                    String.format("UserId=%s is initiator for event with id=%d", userId, eventId),
-//                    "Conflict Exception");
-//        }
-//        нельзя участвовать в неопубликованном событии (Ожидается код ошибки 409)<p>
-//        if (!event.getState().equals("PUBLISHED")) {
-//            throw new ConflictException(String.format("Event id=%d is not published", eventId),
-//                    "ConflictException");
-//        }
-//        если у события достигнут лимит запросов на участие - необходимо вернуть ошибку (Ожидается код ошибки 409)<p>
-//        if (event.getParticipantLimit() != 0 && event.getParticipantLimit().equals(event.getConfirmedRequests())) {
-//            throw new ConflictException("Event confirmed limit reached.", "Conflict exception");
-//        }
-//        - если для события отключена пре-модерация запросов на участие,
-//        то запрос должен автоматически перейти в состояние подтвержденного
-
         final Request newRequest = Request.builder()
                 .requesterId(userId)
                 .eventId(eventId)
-                .status(/*(event.getParticipantLimit() == 0) || (!event.getRequestModeration())
-                        ? CONFIRMED
-                        :*/ PENDING
-                )
+                .status(PENDING)
                 .created(LocalDateTime.now())
                 .build();
 
         final Request savedRequest = requestRepository.save(newRequest);
-        if (newRequest.getStatus().equals(CONFIRMED)) {
-//            event.setConfirmedRequests(event.getConfirmedRequests() + 1);
-            eventClient.upConfirmedRequests(12L, eventId);
-        } else {
-            sendNotification("event.getInitiator().getId()", String.valueOf(eventId), MessageType.REQUEST, "Get Participation Request to event.");
-        }
+        requestSupplier.sendMessageToQueue(new RequestMqDto(savedRequest.getId(), eventId, userId));
 
         return RequestMapper.toDto(savedRequest);
     }
@@ -120,7 +91,7 @@ public class RequestServiceImpl implements RequestService {
         requestRepository.saveAll(requestList);
         return requestList.stream()
                 .map(RequestMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -135,17 +106,31 @@ public class RequestServiceImpl implements RequestService {
 
     @Override
     @Transactional
-    public void changeStatusRequests(RequestMqDto requestMqDto) {
-        final RequestStatus newStatus = RequestStatus.from(requestMqDto.getNewStatus());
-        final List<Request> requestList = requestRepository.findAllById(requestMqDto.getRequest());
+    public void changeStatusRequests(RequestStatusMqDto requestStatusMqDto) {
+        final RequestStatus newStatus = RequestStatus.from(requestStatusMqDto.getNewStatus());
+        final List<Request> requestList = requestRepository.findAllById(requestStatusMqDto.getRequest());
         final MessageType messageType = CONFIRMED.equals(newStatus) ? MessageType.REQUEST_CONFIRMED : MessageType.REQUEST_REJECTED;
-        final String userId = requestMqDto.getUserId();
-        final long eventId = requestMqDto.getEventId();
+        final String userId = requestStatusMqDto.getUserId();
+        final long eventId = requestStatusMqDto.getEventId();
         requestList.forEach(r -> {
             r.setStatus(newStatus);
-            sendNotification(userId, String.valueOf(eventId), messageType, "Changed status Participation Request to event.");
+            notificationSupplier.sendMessageToQueue(NewNotificationDto.builder()
+                    .userId(userId)
+                    .senderId(String.valueOf(eventId))
+                    .messageType(messageType)
+                    .text("Changed status Participation Request to event.")
+                    .build());
         });
         requestRepository.saveAll(requestList);
+    }
+
+    @Override
+    public ParticipationRequestDto getUserRequest(String userId, long requestId) {
+        final Request request = requestRepository.findByIdAndRequesterId(requestId, userId)
+                .orElseThrow(() -> new NotFoundException(
+                        String.format("Request with id=%d for userId=%s was not found.", requestId, userId),
+                        THE_REQUIRED_OBJECT_WAS_NOT_FOUND));
+        return RequestMapper.toDto(request);
     }
 
     @Override
@@ -153,21 +138,12 @@ public class RequestServiceImpl implements RequestService {
         final List<Request> requestList = requestRepository.findAllByEventId(eventId);
         return requestList.stream()
                 .map(RequestMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<ParticipationRequestDto> getUserRequests(String userId) {
         final List<Request> requestList = requestRepository.findAllByRequesterId(userId);
-        return requestList.stream().map(RequestMapper::toDto).collect(Collectors.toList());
-    }
-
-    private void sendNotification(String userId, String senderId, MessageType messageType, String text) {
-        notificationSupplier.sendNewMessage(NewNotificationDto.builder()
-                .userId(userId)
-                .senderId(senderId)
-                .messageType(messageType)
-                .text(text)
-                .build());
+        return requestList.stream().map(RequestMapper::toDto).toList();
     }
 }
